<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droit.hamza.introaudroit.sourceTrad"
    android:background="@drawable/background1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/x3anawin"
            android:text="I- Le droit musulman"/>
        <TextView
            style="@style/sous3anawin"
            android:text="1- Les fondements du droit musulman"/>
        <TextView
            android:text="@string/fondementsdroitMusu"
            style="@style/body"/>
        <TextView
            style="@style/sous3anawin"
            android:text="1I- Le droit musulman comme source du droit marocain"/>
        <TextView
            android:text="@string/droitMuslmanCommeSource"
            style="@style/body"/>
        <TextView
            style="@style/x3anawin"
            android:text="II- La coutume"/>
        <TextView
            style="@style/sous3anawin"
            android:text="1- Définition de la coutume"/>
        <TextView
            android:text="@string/definitionCoutume"
            style="@style/body"/>
        <TextView
            style="@style/sousSous3anawin"
            android:text="a- L’élément matériel :"/>
        <TextView
            android:text="@string/elementMateriel"
            style="@style/body"/>
        <TextView
            style="@style/sousSous3anawin"
            android:text="b- L’élément psychologique :"/>
        <TextView
            android:text="@string/elementPsycho"
            style="@style/body"/>
        <TextView
            style="@style/sous3anawin"
            android:text="2- Les caractères de l’usage coutumier."/>
        <TextView
            android:text="@string/caracyeresUsage"
            style="@style/body"/>

        <TextView
            style="@style/sous3anawin"
            android:text="3- Les rapports entre la loi et la coutume"/>
        <TextView
            android:text="@string/rapportsLoiCoutume"
            style="@style/body"/>
    </LinearLayout>
</ScrollView>