<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droit.hamza.introaudroit.sourceModernes"
    android:background="@drawable/background1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/x3anawin"
            android:text="I- Le droit international"/>
        <TextView
            style="@style/body"
            android:text="@string/droitInternational"/>
        <TextView
            style="@style/x3anawin"
            android:text="II-La loi"/>
        <TextView
            android:text="@string/loi"
            style="@style/body"/>
        <TextView
            style="@style/x3anawin"
            android:text="III-La jurisprudence"/>
        <TextView
            android:text="@string/jurispridence"
            style="@style/body"/>

        <TextView
            style="@style/x3anawin"
            android:text="V-La doctrine"/>
        <TextView
            android:text="@string/doctrine"
            style="@style/body"/>
    </LinearLayout>
</ScrollView>