<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droit.hamza.introaudroit.regleGeneralAbstraite"
    android:background="@drawable/background1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/x3anawin"
        android:text="I- La généralité : caractère commun à toute norme juridique"/>

    <TextView
        style="@style/body"
        android:text="@string/regle_general_abstrait"/>

    <TextView
        style="@style/soutces"
        android:text="@string/source_regle_general"/>
    <TextView
        style="@style/x3anawin"
        android:text="II-Portée relative de la généralité de la règle de droit"/>
    <TextView
        android:text="@string/porteRelative_generalite"
        style="@style/body"/>
</LinearLayout>
</ScrollView>